# chat_server

./: .dockerignore  pyproject.toml  seed_example.py
.github/: copilot-instructions.md
docker/: Dockerfile
src/: chat_tui.py  dispatcher.py  main.py  main_client.py  proxy.py  settings.py  test.py
src/client/: __init__.py  client.py  dispatcher.py
src/proto/: __init__.py  base.py  client.py  crypto.py  network.py  packages.py
src/server/: __init__.py  client.py  dispatcher.py  proto.py  server.py  settings.py
src/storage/: __init__.py  connection.py  dao.py  models.py
tests/: test_proto.py
